--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 <title>ngClassifieds</title>
 </head>
-<body ng-app="ngClassifieds" ng-init="message = 'hsh' ">
+<body ng-app="ngClassifieds" ng-init="message = 'hsssh' " ng-controller="classifiedsCtrl">
 
     <h1>{{message}}</h1>
+    <h1>{{name}}</h1>
     <script src="node_modules/angular/angular.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="components/classifieds.ctr.js"></script>
 </body>
 </html>
